# actions

./: .gitattributes  .gitignore  CHANGELOG.md  PR--CHANGELOG.md  PR-109-CHANGELOG.md  PR-11-CHANGELOG.md  PR-117-CHANGELOG.md  PR-119-CHANGELOG.md  PR-130-CHANGELOG.md  PR-16-CHANGELOG.md  PR-17-CHANGELOG.md  PR-206-CHANGELOG.md  PR-225-CHANGELOG.md  PR-242-CHANGELOG.md  PR-28-CHANGELOG.md  PR-29-CHANGELOG.md  PR-32-CHANGELOG.md  PR-33-CHANGELOG.md  PR-37-CHANGELOG.md  PR-41-CHANGELOG.md  PR-47-CHANGELOG.md  PR-74-CHANGELOG.md  PR-80-CHANGELOG.md  PR-86-CHANGELOG.md  PR-93-CHANGELOG.md  PR-97-CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: __call-release-setup.yml  ci-tests.yml  ci.yml  jest.yml  pytest.yml  release.yml
actions/_template/: README.md  action.yml  ci-matrix.json
actions/audit_repos/: README.md  action.yml  audit.js  ci-matrix.json
actions/check_trailing_spaces/: README.md  action.yml  check_trailing_spaces.js  ci-matrix.json
actions/facebook_post/: Dockerfile  README.md  action.yml  ci-matrix.json  main.py  pyproject.toml
actions/get_changed_files/: README.md  action.yml  ci-matrix.json  get_changed_files.js
actions/monitor_space/: README.md  action.yml  ci-matrix.json  monitor.sh  pre-ci.sh
actions/more_space/: README.md  action.yml  ci-matrix.json  cleanup.sh
actions/pinact/: README.md  action.yml  ci-matrix.json  pinact.js
actions/release_changelog/: README.md  action.yml  changelog.js  ci-matrix.json
actions/release_create/: README.md  action.yml  ci-matrix.json  cleanup.js  post-ci.sh  pre-ci.sh
actions/release_homebrew/: README.md  action.yml  ci-matrix.json  main.py  pre-ci.sh  pyproject.toml
actions/release_setup/: Dockerfile  README.md  action.yml  ci-matrix.json  main.py  pyproject.toml
actions/screenshot/: README.md  action.yml  ci-matrix.json  post-ci.sh  pre-ci.sh  screenshot.ps1  screenshot.sh
actions/setup_cuda/: README.md  action.yml  ci-matrix.json  post-ci.sh  pre-ci.sh  setup_cuda.sh
actions/setup_python/: README.md  action.yml  ci-matrix.json  determine_version.sh  post-ci.sh  pyproject.toml  setup.cfg  setup.py
actions/setup_virtual_desktop/: README.md  action.yml  ci-matrix.json  debug_indicators.sh  post-ci.sh  pyproject.toml  requirements.txt  test_appindicator.py
actions/trailing_spaces/: README.md  action.yml
actions/virtual_desktop/: README.md  action.yml  pyproject.toml  setup_desktop.sh
tests/: conftest.py  testUtils.js  test_actions.py  test_windows_action_scripts.py
tests/audit_repos/: test_audit.test.js
tests/check_trailing_spaces/: check_trailing_spaces.test.js
tests/facebook_post/: test_facebook_post.py
tests/get_changed_files/: get_changed_files.test.js
tests/pinact/: test_pinact.test.js
tests/release_changelog/: test_changelog.test.js
tests/release_create/: test_cleanup.test.js
tests/release_homebrew/: conftest.py  test_release_homebrew.py
tests/release_homebrew/Formula/: hello_world.rb
tests/release_setup/: conftest.py  test_release_setup.py
tests/release_setup/data/: dummy_github_pr_event.json  expected_release_notes_sample_0.md  expected_release_notes_sample_1.md  expected_release_notes_sample_2.md  (+1 more)
tests/setup_python/: conftest.py  test_setup_python.py  test_version_determination.py
tests/trailing_spaces/: trailing_spaces.test.js
verify_changelog/: action.yml
(+11 files in other folders)
