[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lizardbyte-actions-setup-python"
version = "0.0.0"
description = "Setup Python action for GitHub workflows."

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==9.0.3;python_version<'3.5'",
    "pytest==9.0.3;python_version>='3.5' and python_version<'3.6'",
    "pytest==9.0.3;python_version>='3.6' and python_version<'3.7'",
    "pytest==9.0.3;python_version>='3.7' and python_version<'3.9'",
    "pytest==9.0.3;python_version>='3.9'",
]

[tool.setuptools.packages.find]
where = ["."]
include = []
