[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lizardbyte-actions-setup-python"
version = "0.0.0"
description = "Setup Python action for GitHub workflows."

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest<=9.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = []
